# NaviLang

./: .gitignore  README.md
documentation/: sintax.md
documentation/NaviLang/: Development_Roadmap_Phase1.md  Overview.md  PRD_NaviLang_Core.md  architecture.md
navilang-core/: Cargo.toml
navilang-core/examples/: case_mixed.navi  example.navi
navilang-core/src/: analyzer.rs  error.rs  generator.rs  lib.rs  main.rs  reader.rs
navilang-core/src/lexer/: mod.rs  tokens.rs
navilang-core/src/parser/: ast.rs  mod.rs
navilang-core/src/utils/: formatting.rs  mod.rs
navilang-core/tests/: case_insensitive_tests.rs  lexer_integration.rs
