[package]
name = "navilang"
version = "0.1.0"
edition = "2024"
authors = ["Thiago Santos"]
description = "A declarative flow modeling language compiler"
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/Excelsi-Innovations/NaviLang"

[dependencies]
# Core dependencies
logos = "0.13"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
clap = { version = "4.0", features = ["derive"] }
anyhow = "1.0"
thiserror = "1.0"
petgraph = "0.6"
miette = { version = "5.0", features = ["fancy"] }

# Optional features
regex = { version = "1.0", optional = true }
graphviz-rust = { version = "0.6", optional = true }

[dev-dependencies]
insta = "1.0"
criterion = { version = "0.5", features = ["html_reports"] }
tempfile = "3.0"
pretty_assertions = "1.0"

[features]
default = ["mermaid", "graphviz"]
mermaid = []
graphviz = ["graphviz-rust"]
advanced = ["regex"]

[[bin]]
name = "navilang"
path = "src/main.rs"